//-*-mode:protobuf; mode:font-lock;-*-

/*

   calin/proto/iact/telescope_event.proto -- Stephen Fegan -- 2015-12-19

   Protobufs for defining single-telescope event

   Copyright 2015, Stephen Fegan <sfegan@llr.in2p3.fr>
   LLR, Ecole polytechnique, CNRS/IN2P3, Universite Paris-Saclay

   This file is part of "calin"

   "calin" is free software: you can redistribute it and/or modify it
   under the terms of the GNU General Public License version 2 or
   later, as published by the Free Software Foundation.

   "calin" is distributed in the hope that it will be useful, but
   WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
   General Public License for more details.

*/

syntax = "proto3";

import "calin.proto";
import "common_types.proto";

package calin.ix.iact.telescope_event;

message ClockTime {
  uint32 clock_id                       = 1 [
    (CFO).desc = "Clock ID" ];
  common_types.Time clock_time          = 2 [
    (CFO).desc = "Time according to the clock." ];
};

message IntegratedCharges {
  repeated uint32 channel_id            = 1 [ packed=true,
    (CFO).desc = "IDs for channels with a charge present. If all channels in "
      "the camera are present then this can be empty." ];
  repeated uint32 charge                = 2 [ packed=true,
    (CFO).desc = "Integrated charges.",
    (CFO).units = "dc"];
  repeated uint32 peak_sample           = 3 [ packed=true,
    (CFO).desc = "Time of peak signal within readout window in samples.",
    (CFO).units = "samples"];
  repeated uint32 time_over_threshold   = 4 [ packed=true,
    (CFO).desc = "Time-over-threshold in samples.",
    (CFO).units = "samples"];
  repeated uint32 window_start          = 5 [ packed=true,
    (CFO).desc = "Start of integration or sampling window if different from "
      "one channel to another.",
    (CFO).units = "samples"];
  repeated uint32 window_size           = 6 [ packed=true,
    (CFO).desc = "Width of integration window if different from one channel "
      "to another.",
    (CFO).units = "samples"];
};

message ChannelWaveform {
  repeated uint32 samples               = 1 [ packed=true,
    (CFO).desc = "Waveform for one channel.",
    (CFO).units = "dc" ];
};

message Waveforms {
  repeated uint32 channel_id            = 1 [ packed=true,
    (CFO).desc = "IDs for channels with a waveform present. If all channels "
    "in the camera are present then this can be empty." ];
  repeated ChannelWaveform waveform     = 2 [
    (CFO).desc = "Sampled waveforms.",
    (CFO).units = "dc" ];
  uint32 num_samples_per_channel        = 3 [
    (CFO).desc = "Number of samples per channel if this is constant per event, "
      "zero otherwise.",
    (CFO).units = "samples" ];
};

message DigitizedSkyImage {
  IntegratedCharges camera_charges      = 1 [
    (CFO).desc = "Integrated charge (waveform sum) in each of the pixels "
      "retained in the event." ];
  Waveforms camera_waveforms            = 2 [
    (CFO).desc = "Regularly sampled waveform from each of the pixels "
      "retained in the event." ];
};

message ChannelTriggerMap {
  repeated uint32 hit_channel_id        = 1 [ packed=true,
      (CFO).desc = "Channel ID for all channels that triggered." ];
};

enum TriggerType {
  TRIGGER_SCIENCE              = 0;
  TRIGGER_SOFTWARE             = 1;
  TRIGGER_PEDESTAL             = 2;
  TRIGGER_EXTENAL_FLASHER      = 3;
  TRIGGER_INTERNAL_FLASHER     = 4;
  TRIGGER_FORCED_BY_ARRAY      = 5;
};

enum ImageTreatmentMode {
  TREATMENT_SCIENCE            = 0;
  TREATMENT_PASS_THROUGH       = 1;
};

message TelescopeEvent {
  int32 telescope_id                    = 1 [
      (CFO).desc = "Telescope ID." ];
  uint64 local_event_number             = 2 [
      (CFO).desc = "Local (camera) event number." ];
  TriggerType trigger_type              = 3 [
      (CFO).desc = "Trigger type." ];
  bool array_trigger_received           = 4 [
      (CFO).desc = "Flag for whether array trigger was received." ];
  int64 array_event_number              = 5 [
      (CFO).desc = "Array event number or \"-1\" if not received." ];
  repeated ClockTime local_clock_time   = 6 [
      (CFO).desc = "Vector of local clock times associated with event." ];
  ImageTreatmentMode image_treatment    = 7 [
      (CFO).desc = "Image treatment mode." ];

  DigitizedSkyImage image               = 100 [
      (CFO).desc = "Sky image recorded in a single-gain camera." ];
  DigitizedSkyImage high_gain_image     = 101 [
      (CFO).desc = "Sky image recorded in the high-gain path of a dual-gain "
      "camera." ];
  DigitizedSkyImage low_gain_image      = 102 [
      (CFO).desc = "Sky image recorded in the low-gain path of a dual-gain "
      "camera." ];

  ChannelTriggerMap trigger_map         = 200 [
      (CFO).desc = "List of channels that triggered." ];
};
